# postgres-agentic-shop

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  azure.yaml
backend/: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  alembic.ini  logging_config.yaml  pyproject.toml  startup.sh
backend/alembic/: env.py
backend/alembic/versions/: 1b33292593a9_create_schema.py  1b33292593a9_initial_migration.py  7a35c0d9d159_install_postgress_extensions.py  cc30da9b96c1_generate_embeddings_and_index.py  ef85393336cb_seed_data_migration.py  f3e916f4940d_generate_sentiments_for_reviews.py  f41ba96cab17_create_apache_age_graph.py
backend/data/: features.csv  product_features.csv  product_images.csv  product_reviews.csv  products.csv  users.csv  variant_attributes.csv  variants.csv
backend/src/: database.py  logging.py  main.py
backend/src/agents/: __init__.py  evaluation_agent.py  inventory_agent.py  planning_agent.py  presentation_agent.py  product_personalization_agent.py  prompts.py  reviews_agent.py  user_query_agent.py
backend/src/config/: config.py  embed_model.py  llm.py  memory.py  vector_store.py
backend/src/middleware/: user_middleware.py
backend/src/models/: __init__.py  features.py  product_features.py  products.py  reviews.py  users.py  variant_attributes.py  variants.py
backend/src/repository/: __init__.py  base.py  personalized_product_section.py  products.py  reviews.py  users.py  variants.py
backend/src/routes/: agents.py  products.py  reset.py  reviews.py  users.py  utils.py
(+181 files in other folders)
